[tool.poetry]
name = "snowfin"
version = "0.1.0"
description = "An async discord http interactions framework built on top of Sanic."
authors = ["kaj <40004347+KAJdev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.3.2"
dacite = "^1.6.0"
aiohttp = "^3.8.1"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
